neues essen hinzugefügt

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="falafel.html">Falafel</a></li>
+				<li><a href="pita.html">Pita</a></li>
 			</ul>
 		</nav>
 
